# ittp

./: .coverage  LICENSE  README.md  main.py  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: index.doctree  license.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/.doctrees/autoapi/bicubic/: index.doctree
docs/_build/.doctrees/autoapi/bilinear/: index.doctree
docs/_build/.doctrees/autoapi/cartesiangrid/: index.doctree
docs/_build/.doctrees/autoapi/nearest_neoghbour/: index.doctree
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_sources/autoapi/bicubic/: index.rst.txt
docs/_build/_sources/autoapi/bilinear/: index.rst.txt
docs/_build/_sources/autoapi/cartesiangrid/: index.rst.txt
docs/_build/_sources/autoapi/nearest_neoghbour/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/bicubic/: index.html
docs/_build/autoapi/bilinear/: index.html
docs/_build/autoapi/cartesiangrid/: index.html
docs/_build/autoapi/nearest_neoghbour/: index.html
docs/_static/: custom.css
ittp_interpolation/: interpn.py  main.py  regulargrid.py
ittp_interpolation/techniques/: bicubic.py  bilinear.py  nearest_neoghbour.py
ittp_interpolation/tests/: test_bicubic.py  test_bilinear.py  test_nearest_neighbour.py
ittp_interpolation/utils/: image.py  parser.py
ittp_python/: cartesiangrid.py  interpn.py  regulargrid.py
utils/: image.py  parser.py
