[project]
name = "ittp-interpolation"
version = "0.1.0"
dynamic = ["version"]
description = "Study project about interpolation"
authors = [
    {name = "Nick18899", email = "rek-Nick2004@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = ["click (>=8.1.8,<9.0.0)", "requests (>=2.32.3,<3.0.0)", "scipy (>=1.15.2,<2.0.0)", "argparse (>=1.4.0,<2.0.0)", "pillow (>=11.1.0,<12.0.0)", "matplotlib (>=3.10.1,<4.0.0)"]


[project.urls]
"Homepage" = "https://github.com/Nick18899/ittp"


[build-system]
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 79
target-version = ["py311"]
# [tool.setuptools]
# include-package-data = false


[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = []
namespaces = false


[tool.poetry.scripts]
format = "black:main"
nearest_neighbour = "main:nearest_neighbour"
bilinear = "main:bilinear"
bicubic = "main:bicubic"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.9"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
sphinx = "^7.2.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"  # Latest in 7.x series
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.6.0"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"

[tool.ruff]
# Enable flake8-bugbear (\B) rules.
select = ["E", "F", "B", "I"]
ignore = ["E501", "E741"]  # Ignore line length violations and others

# Allow autofix for all enabled rules (when \--fix\) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
